# new_system

./: 4_INSTRUCTION.ipynb  6_TEST_CASE.ipynb  PUSH.sh
1_INSTALL/: 2_INSTALL_QEMU.sh  (+1 more)
ALL/2_INPUT/riscv-unified-db/: .gitignore  .mise.toml  .prettierignore  Gemfile  REUSE.toml  pyproject.toml  renovate.json5
ALL/2_INPUT/riscv-unified-db/.github/workflows/: container.yml  regress.yml
ALL/2_INPUT/riscv-unified-db/backends/cpp_hart_gen/: tasks.rake
ALL/2_INPUT/riscv-unified-db/backends/generators/: tasks.rake
ALL/2_INPUT/riscv-unified-db/backends/portfolio/templates/: csr_appendix.adoc.erb  inst_appendix.adoc.erb
ALL/2_INPUT/riscv-unified-db/backends/proc_cert/templates/: priv_modes.adoc.erb
ALL/2_INPUT/riscv-unified-db/backends/proc_crd/templates/: proc_crd.adoc.erb
ALL/2_INPUT/riscv-unified-db/backends/proc_ctp/: tasks.rake
ALL/2_INPUT/riscv-unified-db/backends/proc_ctp/templates/: proc_ctp.adoc.erb
ALL/2_INPUT/riscv-unified-db/cfgs/profile/: RVA20S64.yaml  RVA20U64.yaml  RVA22U64.yaml  RVA23M64.yaml  RVA23S64.yaml  RVA23U64.yaml  RVB23M64.yaml  RVB23S64.yaml
ALL/2_INPUT/riscv-unified-db/doc/: HOW-DO-I.adoc  ci.adoc  data-templates.adoc
ALL/2_INPUT/riscv-unified-db/spec/schemas/: inst_schema.json  mmr_schema.json  non_isa_schema.json  param_schema.json  profile_schema.json  register_file_schema.json
ALL/2_INPUT/riscv-unified-db/tests/isa/rv32uv/: Makefrag  vsetvl.S
ALL/2_INPUT/riscv-unified-db/tools/python/: profile_extensions.golden
ALL/2_INPUT/riscv-unified-db/tools/scripts/: README_build_z3.md  pages.html.erb  run-rvtest
ALL/2_INPUT/riscv-unified-db/tools/test/: regress-cli.rb  regress-gh-template.yaml
(+1689 files in other folders)
